[package]
name = "neowatch"
description = "A modern alternative to watch command"
version = "0.2.0"
authors = ["Tavo Annus <tavo.annus@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"
keywords = ["watch", "neowatch"]
categories = ["command-line-utilities"]
repository = "https://github.com/kilpkonn/neowatch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"

[[bin]]
name = "neowatch"


[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
clap = { version = "3.0", default-features = false, features = ["std"] }
termcolor = "1.0"
